--- a/index.html
+++ b/index.html
@@ -172,11 +172,14 @@
           </button>
 
           <!-- Botones de categorías -->
+		<button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="toons">Toons</button>
+		 <button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="deportes">Deportes</button>
+		<button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="noticias">Noticias</button>
+	  <button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="entretenimiento">Entretenimiento</button>
           <button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="cine">Cine</button>
-          <button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="deportes">Deportes</button>
-          <button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="musica">Música</button>
+     <button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="musica">Música</button>
           <button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="telenovelas">Telenovelas</button>
-          <button class="btn-categoria text-[#d1d5db] font-semibold text-sm px-3 py-1 rounded bg-[#374151] hover:bg-yellow-500 whitespace-nowrap" data-categoria="noticias">Noticias</button>
+          
 
         </div>
       </div>
