--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
     </div>
 
     <!-- Panel de canales -->
-    <div class="w-full md:w-[300px] bg-[#1a1f23] border-t md:border-t-0 md:border-l border-[#2a2f33] overflow-y-auto max-h-[360px] md:max-h-full">
+    <div class="w-full md:w-[300px] bg-[#1a1f23] border-t md:border-t-0 md:border-l border-[#2a2f33] overflow-y-auto h-full">
+
 
       <!-- Sticky buscador + categorias -->
       <div id="sticky-filters" class="sticky flex flex-col gap-1 px-4 py-3">
