--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
 
         <!--SUBIR ABAJO-->
 <!-- Canal agregado -->
+<div data-title="Canal 11 del Zulia" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://tv.streamcasthd.com:3676/live/canal11delzulialive.m3u8" data-categorias="noticias" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
+  <img class="w-12 h-12 rounded" src="https://yt3.googleusercontent.com/pwPkKCN_WMTIvw_VaZ0vqHnxJl5yiID9QclhbZUN-WoDDfpf6AaLi1H6bzcexQAeAcvYst6I4Q0=s900-c-k-c0x00ffffff-no-rj" alt="Canal 11 del Zulia" />
+  <div class="flex flex-col text-white text-sm truncate">
+    <span class="truncate max-w-[140px]">Canal 11 del Zulia</span>
+    <span class="bg-red-600 text-white text-[10px] font-bold px-2 py-[2px] rounded select-none w-max mt-1">EN VIVO</span>
+  </div>
+  <button class="btn-fav ml-auto text-yellow-400 hover:text-yellow-500 text-lg" title="Agregar/Quitar favorito">
+    <i class="far fa-star"></i>
+  </button>
+</div>
+
+<!-- Canal agregado -->
 <div data-title="Las Estrellas" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://channel01-onlymex.akamaized.net/hls/live/2022749/event01/index_1.m3u8" data-categorias="telenovelas" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
   <img class="w-12 h-12 rounded" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Las_Estrellas_logo_%282016%29.svg/640px-Las_Estrellas_logo_%282016%29.svg.png" alt="Las Estrellas" />
   <div class="flex flex-col text-white text-sm truncate">
