--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
 
         <!--SUBIR ABAJO-->
 <!-- Canal agregado -->
+<div data-title="Estrella Tv - canal" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://estrellatv-plex.amagi.tv/playlist.m3u8" data-categorias="entretenimiento,noticias" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
+  <img class="w-12 h-12 rounded" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Estrella_TV_Logo_2020.png" alt="Estrella Tv - canal" />
+  <div class="flex flex-col text-white text-sm truncate">
+    <span class="truncate max-w-[140px]">Estrella Tv - canal</span>
+    <span class="bg-red-600 text-white text-[10px] font-bold px-2 py-[2px] rounded select-none w-max mt-1">EN VIVO</span>
+  </div>
+  <button class="btn-fav ml-auto text-yellow-400 hover:text-yellow-500 text-lg" title="Agregar/Quitar favorito">
+    <i class="far fa-star"></i>
+  </button>
+</div>
+
+<!-- Canal agregado -->
 <div data-title="Canal 11 del Zulia" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://tv.streamcasthd.com:3676/live/canal11delzulialive.m3u8" data-categorias="noticias" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
   <img class="w-12 h-12 rounded" src="https://yt3.googleusercontent.com/pwPkKCN_WMTIvw_VaZ0vqHnxJl5yiID9QclhbZUN-WoDDfpf6AaLi1H6bzcexQAeAcvYst6I4Q0=s900-c-k-c0x00ffffff-no-rj" alt="Canal 11 del Zulia" />
   <div class="flex flex-col text-white text-sm truncate">
