--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
 
         <!--SUBIR ABAJO-->
 <!-- Canal agregado -->
+<div data-title="Azteca Deportes" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://azt-mun.otteravision.com/azt/mun/mun.m3u8" data-categorias="deportes" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
+  <img class="w-12 h-12 rounded" src="https://yt3.googleusercontent.com/WkOKhgNyYkox6kX1cinPMu1BjS7UdskGuH9bAcfoPt66JCLJzA5_Yvd-msoyifJlJlV-TjgHMg=s900-c-k-c0x00ffffff-no-rj" alt="Azteca Deportes" />
+  <div class="flex flex-col text-white text-sm truncate">
+    <span class="truncate max-w-[140px]">Azteca Deportes</span>
+    <span class="bg-red-600 text-white text-[10px] font-bold px-2 py-[2px] rounded select-none w-max mt-1">EN VIVO</span>
+  </div>
+  <button class="btn-fav ml-auto text-yellow-400 hover:text-yellow-500 text-lg" title="Agregar/Quitar favorito">
+    <i class="far fa-star"></i>
+  </button>
+</div>
+
+<!-- Canal agregado -->
 <div data-title="Fox Deportes" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://csm-e-cetubiausw2live-03c9c435621d18a4b.csm.tubi.video/csm/extlive/tubiprd01,Fox-Sports-Espanol2.m3u8" data-categorias="deportes" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
   <img class="w-12 h-12 rounded" src="https://yt3.googleusercontent.com/62FidHyrjR71hdfEY7PDUbGAiR-CROjybpPEmD5bzE4OQMRllWYGpJJ_tFplNqrL0NHJpW5b7g=s900-c-k-c0x00ffffff-no-rj" alt="Fox Deportes" />
   <div class="flex flex-col text-white text-sm truncate">
