--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
 
         <!--SUBIR ABAJO-->
 <!-- Canal agregado -->
+<div data-title="America TV" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://tgn2.bozztv.com/americateve/americateve1/americateve--1/playlist.m3u8" data-categorias="noticias" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
+  <img class="w-12 h-12 rounded" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfb2rBxmR0KPvk3EPdbwJPKHUfn20Cw3fOKQ&s" alt="America TV" />
+  <div class="flex flex-col text-white text-sm truncate">
+    <span class="truncate max-w-[140px]">America TV</span>
+    <span class="bg-red-600 text-white text-[10px] font-bold px-2 py-[2px] rounded select-none w-max mt-1">EN VIVO</span>
+  </div>
+  <button class="btn-fav ml-auto text-yellow-400 hover:text-yellow-500 text-lg" title="Agregar/Quitar favorito">
+    <i class="far fa-star"></i>
+  </button>
+</div>
+
+<!-- Canal agregado -->
 <div data-title="Canal Once - tv 11" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://vivo.canaloncelive.tv/oncedos/ngrp:pruebachunks_all/playlist.m3u8" data-categorias="noticias" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
   <img class="w-12 h-12 rounded" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Image_of_Canal_11.png" alt="Canal Once - tv 11" />
   <div class="flex flex-col text-white text-sm truncate">
