--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
 
         <!--SUBIR ABAJO-->
 <!-- Canal agregado -->
+<div data-title="ToonzKids" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://d35j504z0x2vu2.cloudfront.net/v1/master/0bc8e8376bd8417a1b6761138aa41c26c7309312/toonzkids-spanish/master.m3u8" data-categorias="toons" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
+  <img class="w-12 h-12 rounded" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEUXTiUbt9AJ4jzW1ebxJeoxNTfbdDCOpqpQ&s" alt="ToonzKids" />
+  <div class="flex flex-col text-white text-sm truncate">
+    <span class="truncate max-w-[140px]">ToonzKids</span>
+    <span class="bg-red-600 text-white text-[10px] font-bold px-2 py-[2px] rounded select-none w-max mt-1">EN VIVO</span>
+  </div>
+  <button class="btn-fav ml-auto text-yellow-400 hover:text-yellow-500 text-lg" title="Agregar/Quitar favorito">
+    <i class="far fa-star"></i>
+  </button>
+</div>
+
+<!-- Canal agregado -->
 <div data-title="AZTV zona - Anime zona tv" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://stmv1.srvif.com/loadingtv/loadingtv/playlist.m3u8" data-categorias="toons" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
   <img class="w-12 h-12 rounded" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxaEfaLlTAOnutjTUy8_3j6X2DYViO-KpnBQ&s" alt="AZTV zona - Anime zona tv" />
   <div class="flex flex-col text-white text-sm truncate">
@@ -221,10 +233,10 @@
 </div>
 
 <!-- Canal agregado -->
-<div data-title="DW EspaÃÂÃÂ±ol" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://dwamdstream104.akamaized.net/hls/live/2015530/dwstream104/index.m3u8" data-categorias="noticias" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
-  <img class="w-12 h-12 rounded" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Deutsche_Welle_symbol_2012.svg/1200px-Deutsche_Welle_symbol_2012.svg.png" alt="DW EspaÃÂÃÂ±ol" />
+<div data-title="DW EspaÃÂÃÂÃÂÃÂ±ol" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://dwamdstream104.akamaized.net/hls/live/2015530/dwstream104/index.m3u8" data-categorias="noticias" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
+  <img class="w-12 h-12 rounded" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Deutsche_Welle_symbol_2012.svg/1200px-Deutsche_Welle_symbol_2012.svg.png" alt="DW EspaÃÂÃÂÃÂÃÂ±ol" />
   <div class="flex flex-col text-white text-sm truncate">
-    <span class="truncate max-w-[140px]">DW EspaÃÂÃÂ±ol</span>
+    <span class="truncate max-w-[140px]">DW EspaÃÂÃÂÃÂÃÂ±ol</span>
     <span class="bg-red-600 text-white text-[10px] font-bold px-2 py-[2px] rounded select-none w-max mt-1">EN VIVO</span>
   </div>
   <button class="btn-fav ml-auto text-yellow-400 hover:text-yellow-500 text-lg" title="Agregar/Quitar favorito">
