--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <div data-title="DW EspaÃÂÃÂÃÂÃÂ±ol" data-src="https://lzrdrgz01.github.io/web?player=jwpl&provider=rand&format=video%2Fmp4&link=https://dwamdstream104.akamaized.net/hls/live/2015530/dwstream104/index.m3u8" data-categorias="noticias" class="canal flex items-center gap-3 bg-[#0a0c0e] rounded-md p-2 cursor-pointer hover:bg-[#111417]">
   <img class="w-12 h-12 rounded" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Deutsche_Welle_symbol_2012.svg/1200px-Deutsche_Welle_symbol_2012.svg.png" alt="DW EspaÃÂÃÂÃÂÃÂ±ol" />
   <div class="flex flex-col text-white text-sm truncate">
-    <span class="truncate max-w-[140px]">DW EspaÃÂÃÂÃÂÃÂ±ol</span>
+    <span class="truncate max-w-[140px]">DW Espanol</span>
     <span class="bg-red-600 text-white text-[10px] font-bold px-2 py-[2px] rounded select-none w-max mt-1">EN VIVO</span>
   </div>
   <button class="btn-fav ml-auto text-yellow-400 hover:text-yellow-500 text-lg" title="Agregar/Quitar favorito">
@@ -799,5 +799,14 @@ function ordenarCanales() {
     // Estado inicial icono menu
     actualizarIconoMenu(false);
   </script>
+	<nav class="fixed bottom-0 left-0 w-full bg-[#1E1E1E] flex justify-around items-center py-3 rounded-b-3xl text-white text-xs font-semibold z-50">
+  <a href="javascript:window.history.back();" class="flex flex-col items-center space-y-1">
+    <i class="fas fa-arrow-left text-xl"></i><span>Regresar</span>
+  </a>
+<a href="https://cuentaappcreator.github.io/streaming/" class="flex flex-col items-center space-y-1">
+<i class="fas fa-th-large text-xl"></i><span>Streaming</span>
+</a>
+
+</nav>
 </body>
 </html>
